Fixed compile errors